RESOLVED FIXED119275
Fix typo in enum name ("SelectionInSnaphot" -> "SelectionInSnapshot")
https://bugs.webkit.org/show_bug.cgi?id=119275
Summary Fix typo in enum name ("SelectionInSnaphot" -> "SelectionInSnapshot")
Tim Horton
Reported 2013-07-30 14:10:54 PDT
Just a typo.
Attachments
patch (5.61 KB, patch)
2013-07-30 14:13 PDT, Tim Horton
simon.fraser: review+
Tim Horton
Comment 1 2013-07-30 14:13:59 PDT
WebKit Commit Bot
Comment 2 2013-07-30 14:16:37 PDT
Attachment 207765 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCore/WebCore.exp.in', u'Source/WebCore/page/FrameView.cpp', u'Source/WebCore/page/FrameView.h', u'Source/WebKit2/ChangeLog', u'Source/WebKit2/WebProcess/InjectedBundle/DOM/InjectedBundleNodeHandle.cpp', u'Source/WebKit2/WebProcess/WebPage/WebPage.cpp']" exit_code: 1 Source/WebKit2/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 2 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3 2013-07-30 14:26:04 PDT
Note You need to log in before you can comment on or make changes to this bug.